--- a/examples/SignUp/locales/fr/translation.json
+++ b/examples/SignUp/locales/fr/translation.json
@@ -9,7 +9,7 @@
   "Language:": "Langue :",
   "English": "Anglais",
   "French": "Français",
-  "Note: each field is debounced with a 1s delay": "Note : chaque champ a un \"debounce\" de 1s",
+  "Note: each field is debounced with a 1s delay": "Note : chaque champ à un \"debounce\" de 1s",
   "First Name": "Prénom",
   "Too short": "Trop court",
   "Looks good!": "OK !",
@@ -25,7 +25,7 @@
   "Sorry, you must be at least 18 years old": "Désolé, vous devez avoir au moins 18 ans",
   "Hmm, you seem a bit young...": "Humm, vous êtes trop jeune...",
   "Phone number": "Numéro de téléphone",
-  "Invalid phone number, must be 10 digits": "",
+  "Invalid phone number, must be 10 digits": "Numéro de téléphone invalide, doit contenir 10 chiffres",
   "Favorite Color": "Couleur préférée",
   "Select a color...": "Selectionnez une couleur",
   "Employed": "Salarié",
