--- a/examples/SignUp/locales/fr/translation.json
+++ b/examples/SignUp/locales/fr/translation.json
@@ -23,7 +23,7 @@
   "Female": "Féminin",
   "Age": "Age",
   "Sorry, you must be at least 18 years old": "Désolé, vous devez avoir au moins 18 ans",
-  "Hmm, you seem a bit young...": "Humm, vous êtes trop jeune...",
+  "Hmm, you seem a bit young...": "Humm, vous êtes un peu jeune...",
   "Phone number": "Numéro de téléphone",
   "Invalid phone number, must be 10 digits": "Numéro de téléphone invalide, doit contenir 10 chiffres",
   "Favorite Color": "Couleur préférée",
